Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/SOM_Log__c.object-meta.xml
<CustomObject>
    <label>OMS Log</label>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>