Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/fields/AttachedToId__c.field-meta.xml
<CustomField>
    <fullName>AttachedToId__c</fullName>
    <description>Represents the ID of the sObject that attached to the log.</description>
    <label>Attached To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>