Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the log.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>