Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the log represents an error or not.</description>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>