Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message of the log.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>