Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AttachedToId__c</columns>
    <columns>Category__c</columns>
    <columns>IsError__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>